<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_knowledge"
        android:title="@string/tab_knowledge"
        android:icon="@drawable/ic_knowledge" />
    <item
        android:id="@+id/nav_chat"
        android:title="@string/tab_chat"
        android:icon="@drawable/ic_chat" />
    <item
        android:id="@+id/nav_practice"
        android:title="@string/tab_practice"
        android:icon="@drawable/ic_practice" />
    <item
        android:id="@+id/nav_errors"
        android:title="@string/tab_errors"
        android:icon="@drawable/ic_errors" />
    <item
        android:id="@+id/nav_profile"
        android:title="@string/tab_profile"
        android:icon="@drawable/ic_profile" />
</menu>
